Fix info navbar overflow

--- a/data/interfaces/default/css/plexpy.css
+++ b/data/interfaces/default/css/plexpy.css
@@ -734,6 +734,8 @@ a .users-poster-face:hover {
     background-color: rgba(255,255,255,.03);
     height: 50px;
     line-height: 50px;
+    max-height: 50px;
+    overflow: hidden;
 }
 .summary-navbar-list {
     padding: 0 25px;
